--- a/haskell/haskell.cabal
+++ b/haskell/haskell.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: e8a13c1acdda57b2cd168580f2d1925d43671e13c0197a3455cb4ded3202f310
+-- hash: dc19439fcd259327565d1b6839cc77cb202c4429399a9656f0bfc08c297a580d
 
 name:           haskell
 version:        0.1.0.0
@@ -33,7 +33,9 @@ library
   hs-source-dirs:
       src
   build-depends:
-      base >=4.7 && <5
+      GLFW-b >=3.3
+    , OpenGL >=3.0
+    , base >=4.7 && <5
   default-language: Haskell2010
 
 executable haskell-exe
@@ -44,7 +46,9 @@ executable haskell-exe
       app
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      GLFW-b >=3.3
+    , OpenGL >=3.0
+    , base >=4.7 && <5
     , haskell
   default-language: Haskell2010
 
@@ -57,6 +61,8 @@ test-suite haskell-test
       test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      GLFW-b >=3.3
+    , OpenGL >=3.0
+    , base >=4.7 && <5
     , haskell
   default-language: Haskell2010
