--- a/haskell/package.yaml
+++ b/haskell/package.yaml
@@ -21,6 +21,8 @@ description:         Please see the README on GitHub at <https://github.com/gith
 
 dependencies:
 - base >= 4.7 && < 5
+- OpenGL >= 3.0
+- GLFW-b >= 3.3
 
 library:
   source-dirs: src
