--- a/haskell/haskell.cabal
+++ b/haskell/haskell.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: dc19439fcd259327565d1b6839cc77cb202c4429399a9656f0bfc08c297a580d
+-- hash: 29facebb5ec397165a3048786ae268e93ff6e9c7f0c02c29b046b94e2812d7b6
 
 name:           haskell
 version:        0.1.0.0
@@ -36,6 +36,7 @@ library
       GLFW-b >=3.3
     , OpenGL >=3.0
     , base >=4.7 && <5
+    , mtl
   default-language: Haskell2010
 
 executable haskell-exe
@@ -50,6 +51,7 @@ executable haskell-exe
     , OpenGL >=3.0
     , base >=4.7 && <5
     , haskell
+    , mtl
   default-language: Haskell2010
 
 test-suite haskell-test
@@ -65,4 +67,5 @@ test-suite haskell-test
     , OpenGL >=3.0
     , base >=4.7 && <5
     , haskell
+    , mtl
   default-language: Haskell2010
