--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[dependencies]
+[dependencies.glfw]
+git = "https://github.com/bjz/glfw-rs.git"
